[project]
name = "langgraph-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.7",
    "langgraph-cli[inmem]>=0.2.10",
]
